--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-<!-- nothing here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Werkstuk</title>
+</head>
+<body>
+    <div class="nav-container">
+        <nav class="nav-bar"></nav>
+        <h1 id="navbar-logo">MIKE</h1>
+        <div class="menu-toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+        <ul class="nav-menu">
+        <li><a href="index.html" class="nav-links">Home</a></li>
+            <li><a href="about-me.html" class="nav-links">About Me</a></li>
+            <li><a href="contact.html" class="nav-links">Contact</a></li>
+        </ul>
+      </nav>
+      <div class="bg-gradiant">
+      <div class="main">
+        <div class="main-container">
+            <h2>Welcome to my home page</h2>
+            <p>This personal website will give the access<br> to know me better. Click on the button below to miss nothing.
+             </p>
+
+             <div class="main-btn"><a href="#">Continue</a></div>
+        </div>
+        <div class="main-img-container">
+            <img src="images/background.jpg" alt="" id="main-img">
+        </div>
+            <div class="about Me"></div>
+      </div>
+    </div>
+
+</body>
+</html>
