--- a/index.html
+++ b/index.html
@@ -33,9 +33,39 @@
         <div class="main-img-container">
             <img src="images/background.jpg" alt="" id="main-img">
         </div>
-            <div class="about Me"></div>
-      </div>
-    </div>
 
+    
+
+      </div>
+        <div class="footer">
+            <div class="col-1">
+                <h5>USEFUL LINKS</h5>
+                <a href="#" >About</a>
+                <a href="#" >Services</a>
+                <a href="#" >Contact</a>
+
+                <div class="flex">
+                    <div class="kolom 1">
+                       <p>Kolom 1</p> 
+                    </div>
+                    <div class="Kolom 2">
+                        <p>Kolom 2</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-2">
+            <h3>NEWSLETTER</h3>
+            <form>
+                <input type="text" placeholder="Your Email Adress">
+                <button type="submit">SUBSCRIBE NOW</button>
+               </form>
+            </div>
+            <div class="col-3">
+               <h3>CONTACT</h3> 
+               <P>1 Fleet Pl, London EC4M 7RD, UK</P>
+            </div>
+    </div>
+    
 </body>
 </html>
