--- a/index.html
+++ b/index.html
@@ -1,71 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Werkstuk</title>
-</head>
-<body>
-    <div class="nav-container">
-        <nav class="nav-bar"></nav>
-        <h1 id="navbar-logo">MIKE</h1>
-        <div class="menu-toggle" id="mobile-menu">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </div>
-        <ul class="nav-menu">
-        <li><a href="index.html" class="nav-links">Home</a></li>
-            <li><a href="about-me.html" class="nav-links">About Me</a></li>
-            <li><a href="contact.html" class="nav-links">Contact</a></li>
-        </ul>
-      </nav>
-      <div class="bg-gradiant">
-      <div class="main">
-        <div class="main-container">
-            <h2>Welcome to my home page</h2>
-            <p>This personal website will give the access<br> to know me better. Click on the button below to miss nothing.
-             </p>
-
-             <div class="main-btn"><a href="#">Continue</a></div>
-        </div>
-        <div class="main-img-container">
-            <img src="images/background.jpg" alt="" id="main-img">
-        </div>
-
-    
-
-      </div>
-        <div class="footer">
-            <div class="col-1">
-                <h5>USEFUL LINKS</h5>
-                <a href="#" >About</a>
-                <a href="#" >Services</a>
-                <a href="#" >Contact</a>
-
-                <div class="flex">
-                    <div class="kolom 1">
-                       <p>Kolom 1</p> 
-                    </div>
-                    <div class="Kolom 2">
-                        <p>Kolom 2</p>
-                    </div>
-                </div>
-
-            </div>
-            <div class="col-2">
-            <h3>NEWSLETTER</h3>
-            <form>
-                <input type="text" placeholder="Your Email Adress">
-                <button type="submit">SUBSCRIBE NOW</button>
-               </form>
-            </div>
-            <div class="col-3">
-               <h3>CONTACT</h3> 
-               <P>1 Fleet Pl, London EC4M 7RD, UK</P>
-            </div>
-    </div>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="style.css" />
+		<title>Werkstuk</title>
+	</head>
+	<body>
+		<nav>
+			<a href="#">HOME</a>
+			<a href="#">ABOUT ME</a>
+			<a href="#">CONTACT</a>
+		</nav>
+	</div>
+	</body>
 </html>
+
+
+
