--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
 		<title>Werkstuk</title>
 	</head>
 	<body>
-		<nav>
-			<a href="#">HOME</a>
-			<a href="#">ABOUT ME</a>
-			<a href="#">CONTACT</a>
-		</nav>
-	</div>
+		<header>
+			<nav>
+				<a href="index.html">HOME</a>
+				<a href="about-me.html">ABOUT ME</a>
+				<a href="contact.html">CONTACT</a>
+			</nav>
+		</header>
+
+		<div class="content">
+			<div>
+				<img src="images/foto-homepage.png" />
+				<h1>I'm Michée Minsoto</h1>
+				<p>Front End developer &  Web Designer </p>
+				<a href="about-me.html" class="about-me- button">ABOUT ME</a>
+			</div>
+		</div>
 	</body>
 </html>
-
-
-
