button home page

--- a/home.html
+++ b/home.html
@@ -21,14 +21,15 @@
 			<img src="images/foto-homepage.png" alt="foto-homepage">
 		<div>
 	</div>
-
-
-				
-		<div class="content-name">
+			
+		<div class="content-text">
 			<h1>I'm Michée Minsoto</h1>
+			<h2>front end developer & web designer</h2>
 		</div>
 			
-
+		<div class="button">
+			<a href="about-me.html"></a>
+		</div>
 
 
 
