logo social media

--- a/index.html
+++ b/index.html
@@ -28,13 +28,7 @@
 				<h2>Front End Developer & Web Designer</h2>
 				<a href="#" class="button">About Me</a>
 				<div class="social-links">
-
-
-
-
-
-
-
+					<img src="images/social-links.png" alt="social-links">
 			</div>
 		</div>
 	</section>
