--- a/about-me.html
+++ b/about-me.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <main>
         <nav>
             <ul>
                 <li><a href="index.html">HOME</a></li>
@@ -19,7 +20,7 @@
 
 <section class="about-me">
     <div class="foto">
-        
+
 
 
 
@@ -48,6 +49,6 @@
 
 
 
-
+</main>
 </body>
 </html>
