--- a/about-me.html
+++ b/about-me.html
@@ -20,18 +20,27 @@
 
 <section class="about-me">
     <div class="foto">
-
-
-
-
+        <img src="images/foto-about-me.png" alt="foto-about-me">
     </div>
 
+    <div class="info">
+        <h1>WHO AM I?</h1>
+        <p>My name is Michée.<br>
+        I'm 21 years old.<br>
+        I study multimedia in University College Erasmus at Brussels.<br>
+        My passion for technology began when I was a child.<br>
+        It has always driven me to learn about the latest developments.
+        <br>In my free times, I do severals thing such as fitness,
+        learning foreign languages.</p>
 
-
-
-
-
-
+        <div class="contact">
+            <p><strong>Full name:</strong>Michée Minsoto Mike</p>
+            <p><strong>Age:</strong>21 years old</p>
+            <p><strong>Phone:</strong>+32 468 20 22 47</p>
+            <p><strong>Email:</strong>micheeminsoto@gmail.com</p>
+        <a href="mailto:michee.minsoto@student.ehb.be" class="contact-me"></a>
+        </div>
+    </div>
 </section>
     
 
