about me contact and skills

--- a/about-me.html
+++ b/about-me.html
@@ -43,7 +43,36 @@
     </div>
 </section>
     
+<section class="skills">
+    <div class="professional-skills">
+        <h2>professional-skills</h2>
+        <div class="skills">
+            <span>HTML</span>
+            <div class="progress">
+                <div class="progress-bar" style="width: 75%;">75%</div>
+            </div>
+         </div>
+         <div class="skill">
+            <span>Illustrator</span>
+            <div class="progress-bar" style="width: 80%;">80%</div>
+         </div> 
+    </div>
+    <div class="skill">
+        <span>Javascript</span>
+        <div class="progress" style="width: 40%;">40%</div>
+    </div>
+</div>
+<div class="skill">
+    <span>Photoshop</span>
+    <div class="progress">
 
+    </div>
+</div>
+
+
+
+
+</section>
 
 
 
