--- a/about-me.html
+++ b/about-me.html
@@ -54,25 +54,40 @@
          </div>
          <div class="skill">
             <span>Illustrator</span>
+            <div class="progress">
             <div class="progress-bar" style="width: 80%;">80%</div>
          </div> 
     </div>
-    <div class="skill">
-        <span>Javascript</span>
-        <div class="progress" style="width: 40%;">40%</div>
+        <div class="skill">
+            <span>Javascript</span>
+            <div class="progress">
+            <div class="progress-bar" style="width: 40%;">40%</div>
+        </div>
     </div>
-</div>
-<div class="skill">
-    <span>Photoshop</span>
-    <div class="progress">
-
+        <div class="skill">
+             <span>Photoshop</span>
+            <div class="progress">
+                <div class="progress-bar" style="width: 50%;">50%</div>
+            </div>
+        </div>
     </div>
-</div>
-
-
-
-
+    <div class="basic-skills">
+        <h2>basic Skills</h2>
+        <div class="skill">
+            <span>Frans & Nederlands</span>
+           <div class="progress">
+                <div class="progress-bar" style="width: 100%;">100%</div>
+           </div>
+        </div>
+        <div class="skill">
+            <span>Teambuilding</span>
+           <div class="progress">
+                <div class="progress-bar" style="width: 70%">70%</div>
+           </div>
+        </div>
+    </div>
 </section>
+
 
 
 
