--- a/about-me.html
+++ b/about-me.html
@@ -11,9 +11,9 @@
         <main>
         <nav>
             <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="about-me.html" class="active">ABOUT ME</a></li>
-                <li><a href="#"></a></li>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#" class="active">ABOUT ME</a></li>
+                <li><a href="#">CONTACT</a></li>
             </ul>
         </nav>
     </header>
@@ -23,8 +23,11 @@
         <img src="images/foto-about-me.png" alt="foto-about-me">
     </div>
 
+
     <div class="info">
-        <h1>WHO AM I?</h1>
+        <div class="info-title">
+            <h1>WHO AM I?</h1>
+        </div>
         <p>My name is Michée.<br>
         I'm 21 years old.<br>
         I study multimedia in University College Erasmus at Brussels.<br>
@@ -47,6 +50,7 @@
     <div class="professional-skills">
         <h2>professional-skills</h2>
         <div class="skills">
+           <div class="skill">
             <span>HTML</span>
             <div class="progress">
                 <div class="progress-bar" style="width: 75%;">75%</div>
