--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONTACT - Michée Minsoto</title>
+    <link rel="stylesheet" href="contact.css">
 </head>
 <body>
     <header>
+        <main>
         <nav>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">ABOUT ME</a></li>
+                <li><a href="#">CONTACT</a></li>
+            </ul>
         </nav>
     </header>
+
+    <section class="contact">
+        <h2>CONTACT</h2>
+        <div class="contact-container">
+            <div class="contact-item">
+                <p class="title">VISIT US</p>
+                <a href="#" class="info">Nijverheidskaai 170</a>
+            </div>
+            <div class="divider"></div>
+            <div class="contact-item">
+                
+                <p class="title">CALL US</p>
+                <a href="tel:+32468202247" class="info">+32 468 20 22 47</a>
+            </div>
+            <div class="divider"></div>
+            <div class="contact-item">
+                <p class="title">CONTACT US</p>
+                <a href="mailto:michee.minsoto@student.ehb.be" class="info">michee.minsoto@student.ehb.be</a>
+            </div>
+        </div>
+</section>
+
+<div class="map-container">
+    <iframe 
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2519.1280290303515!2d4.348783515745905!3d50.84550287953207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c480e7b7b1a3%3A0xc31f76d0dcd0c6e8!2sNijverheidskaai%20170%2C%201070%20Anderlecht%2C%20Belgium!5e0!3m2!1sen!2sus!4v1617770736075!5m2!1sen!2sus"
+        width="600" 
+        height="450" 
+        style="border:0;" 
+        allowfullscreen="" 
+        loading="lazy">
+    </iframe>
+
+    <footer class="outer">
+        <p>Nijverheidskaai 170 <br>1070 Anderlecht</p>
+
+
+    </footer>
+
+
 </body>
 </html>
+
+
