--- a/about-me.html
+++ b/about-me.html
@@ -50,7 +50,7 @@
     
 <section class="skills">
     <div class="professional-skills">
-        <h2>professional-skills</h2>
+        <h3>professional skills</h3>
         <div class="skills">
            <div class="skill">
             <span>HTML</span>
@@ -78,7 +78,7 @@
         </div>
     </div>
     <div class="basic-skills">
-        <h2>basic Skills</h2>
+        <h3>basic skills</h3>
         <div class="skill">
             <span>Frans & Nederlands</span>
            <div class="progress">
@@ -94,11 +94,17 @@
     </div>
 </section>
 
+<main>
 
 
 
 
 
+
+
+
+    
+</main>
 
 
 
