footer about me

--- a/about-me.html
+++ b/about-me.html
@@ -95,6 +95,18 @@
 </section>
 
 <main>
+    <div class="hobbies">
+        <h2>HOBBIES</h2>
+    </div>
+
+   <section class="fotogalerij">
+            <div class="foto-container"></div>
+
+
+
+
+
+   </section>
 
 
 
@@ -103,7 +115,7 @@
 
 
 
-    
+
 </main>
 
 
