hamburger-menu contact pagina

--- a/about-me.html
+++ b/about-me.html
@@ -9,11 +9,20 @@
 <body>
     <header>
         <main>
-        <nav>
+            <nav>
+                <div class="menu-container">
+                    <div class="menu-icon" id="menu-icon">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                
+                    <nav class="menu" id="menu">
+                        <div class="menu-icon" id="menu-icon"></div>
             <ul>
-				<li><a href="home.html">HOME</a></li>
-                <li><a href="about-me.html">ABOUT ME</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
+				<li><a href="#">HOME</a></li>
+                <li><a href="#">ABOUT ME</a></li>
+                <li><a href="#">CONTACT</a></li>
 			</ul>
         </nav>
     </header>
