--- a/hamburger-menu.html
+++ b/hamburger-menu.html
@@ -15,18 +15,17 @@
         </div>
     
         <nav class="menu" id="menu">
+            <div class="menu-icon" id="menu-icon"></div>
         <ul>
-            <li><a href="home.html">HOME</a></li>
-            <li><a href="about-me.html">ABOUT ME</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="#" class="menu-close" id="menu-close">&times;</a></li>
+            <li><a href="home.html" class="menu-item">HOME</a></li>
+            <li><a href="about-me.html" class="menu-item">ABOUT ME</a></li>
+            <li><a href="contact.html" class="menu-item">CONTACT</a></li>
         </ul>
     </div>
 </nav>
 
 <script src="hamburger-menu.js"></script>
-
-
-
 
 
 
