--- a/home.html
+++ b/home.html
@@ -10,9 +10,9 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="home.html">HOME</a></li>
-                <li><a href="about-me.html">ABOUT ME</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
+				<li><a href="#">HOME</a></li>
+                <li><a href="#">ABOUT ME</a></li>
+                <li><a href="#">CONTACT</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -26,7 +26,7 @@
 			<div class="intro-text">
 				<h1>I'm Michée Minsoto</h1>
 				<h2>Front End Developer & Web Designer</h2>
-				<a href="about-me.html" class="button" target="_parent">About Me</a>
+				<a href="#" class="button" target="_parent">About Me</a>
 				<div class="social-links">
 					<img src="images/social-links.png" alt="social-links">
 			</div>
