hamburger menu about me page

--- a/about-me.html
+++ b/about-me.html
@@ -20,9 +20,10 @@
                     <nav class="menu" id="menu">
                         <div class="menu-icon" id="menu-icon"></div>
             <ul>
-				<li><a href="#">HOME</a></li>
-                <li><a href="#">ABOUT ME</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="#" class="menu-close" id="menu-close">&times;</a></li>
+				<li><a href="#" class="menu-item">HOME</a></li>
+                <li><a href="#" class="menu-item">ABOUT ME</a></li>
+                <li><a href="#" class="menu-item">CONTACT</a></li>
 			</ul>
         </nav>
     </header>
@@ -135,7 +136,7 @@
     <p>Nijverheidskaai 170 <br>1070 Anderlecht</p>
 </footer>
 
-
+<script src="hamburger-menu.js"></script>
 
 </body>
 </html>
