hamburger menu home page

--- a/home.html
+++ b/home.html
@@ -9,10 +9,20 @@
 <body>
 	<header>
 		<nav>
+			<div class="menu-container">
+				<div class="menu-icon" id="menu-icon">
+					<div></div>
+					<div></div>
+					<div></div>
+				</div>
+			
+				<nav class="menu" id="menu">
+					<div class="menu-icon" id="menu-icon"></div>
 			<ul>
-				<li><a href="#">HOME</a></li>
-                <li><a href="#">ABOUT ME</a></li>
-                <li><a href="#">CONTACT</a></li>
+				<li><a href="#" class="menu-close" id="menu-close">&times;</a></li>
+				<li><a href="#" class="menu-item">HOME</a></li>
+                <li><a href="#" class="menu-item">ABOUT ME</a></li>
+                <li><a href="#" class="menu-item">CONTACT</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -39,7 +49,7 @@
 </footer>
 
 
-
+<script src="hamburger-menu.js"></script>
 
 
 </body>
