aanpassing margin profiel foto

--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Michée Minsoto - Front End Developer & Web Designer</title>
 	<link rel="stylesheet" href="home.css">
-</head>
+	<script src="hamburger-menu.js"></script>
 <body>
 	<header>
 		<nav>
@@ -18,11 +18,11 @@
 			
 				<nav class="menu" id="menu">
 					<div class="menu-icon" id="menu-icon"></div>
-			<ul>
-				<li><a href="#" class="menu-close" id="menu-close">&times;</a></li>
-				<li><a href="#" class="menu-item">HOME</a></li>
-                <li><a href="#" class="menu-item">ABOUT ME</a></li>
-                <li><a href="#" class="menu-item">CONTACT</a></li>
+			<ul class="nav-links">
+				<li><a href="#" class="menu-close" id="menu-close">&#10005;</a></li>
+				<li><a href="home.html" class="menu-item">HOME</a></li>
+                <li><a href="about-me.html" class="menu-item">ABOUT ME</a></li>
+                <li><a href="contact.html" class="menu-item">CONTACT</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -36,7 +36,7 @@
 			<div class="intro-text">
 				<h1>I'm Michée Minsoto</h1>
 				<h2>Front End Developer & Web Designer</h2>
-				<a href="#" class="button" target="_parent">About Me</a>
+				<a href="about-me.html" class="button" >About Me</a>
 				<div class="social-links">
 					<img src="images/social-links.png" alt="social-links">
 			</div>
@@ -49,7 +49,6 @@
 </footer>
 
 
-<script src="hamburger-menu.js"></script>
 
 
 </body>
