--- a/contact.html
+++ b/contact.html
@@ -19,11 +19,11 @@
             
                 <nav class="menu" id="menu">
                     <div class="menu-icon" id="menu-icon"></div>
-            <ul>
+            <ul class="nav-links">
                 <li><a href="#" class="menu-close" id="menu-close">&times;</a></li>
-                <li><a href="#" class="menu-item">HOME</a></li>
-                <li><a href="#" class="menu-item">ABOUT ME</a></li>
-                <li><a href="#" class="menu-item">CONTACT</a></li>
+                <li><a href="home.html" class="menu-item">HOME</a></li>
+                <li><a href="about-me.html" class="menu-item">ABOUT ME</a></li>
+                <li><a href="contact.html" class="menu-item">CONTACT</a></li>
             </ul>
         </nav>
     </header>
