--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
             <div class="divider"></div>
             <div class="contact-item">
                 <p class="title">CALL US</p>
-                <a href="tel:+32468202247" class="info">+32 468 20 22 47</a>
+                <a href="tel:+32 475 12 34 56" class="info">+32 475 12 34 56</a>
             </div>
             <div class="divider"></div>
             <div class="contact-item">
