wijziging menu close about me, contact page

--- a/about-me.html
+++ b/about-me.html
@@ -21,11 +21,11 @@
                     <nav class="menu" id="menu">
                         <div class="menu-icon" id="menu-icon"></div>
             <ul class="nav-links">
-                <li><a href="#" class="menu-close" id="menu-close">&times;</a></li>
 				<li><a href="home.html" class="menu-item">HOME</a></li>
                 <li><a href="about-me.html" class="menu-item">ABOUT ME</a></li>
                 <li><a href="contact.html" class="menu-item">CONTACT</a></li>
 			</ul>
+            <a href="#" class="menu-close" id="menu-close">&times;</a>
         </nav>
     </header>
 
