--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
                     <div class="menu-icon" id="menu-icon"></div>
             <ul class="nav-links">
           
-                <li><a href="home.html" class="menu-item">HOME</a></li>
+                <li><a href="index.html" class="menu-item">HOME</a></li>
                 <li><a href="about-me.html" class="menu-item">ABOUT ME</a></li>
                 <li><a href="contact.html" class="menu-item">CONTACT</a></li>
             </ul>
