--- a/hamburger-menu.html
+++ b/hamburger-menu.html
@@ -18,7 +18,7 @@
             <div class="menu-icon" id="menu-icon"></div>
         <ul>
             <li><a href="#" class="menu-close" id="menu-close">&times;</a></li>
-            <li><a href="home.html" class="menu-item">HOME</a></li>
+            <li><a href="index.html" class="menu-item">HOME</a></li>
             <li><a href="about-me.html" class="menu-item">ABOUT ME</a></li>
             <li><a href="contact.html" class="menu-item">CONTACT</a></li>
         </ul>
