--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Michée Minsoto - Front End Developer & Web Designer</title>
-	<link rel="stylesheet" href="home.css">
+	<link rel="stylesheet" href="style.css">
 	<script src="hamburger-menu.js"></script>
 <body>
 	<header>
@@ -19,7 +19,7 @@
 				<nav class="menu" id="menu">
 					<div class="menu-icon" id="menu-icon"></div>
 			<ul class="nav-links">
-				<li><a href="home.html" class="menu-item">HOME</a></li>
+				<li><a href="index.html" class="menu-item">HOME</a></li>
                 <li><a href="about-me.html" class="menu-item">ABOUT ME</a></li>
                 <li><a href="contact.html" class="menu-item">CONTACT</a></li>
 			</ul>
